ordenando alfabericamente select de municipio2 y aplicando select2

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -234,3 +234,6 @@ table.small-font {
     border-collapse: separate !important; 
     border: 1px solid #ddd !important;
 }
+span#select2-municipio2-container {text-align: center;}
+span#select2-municipio2-container span.select2-selection__placeholder{color: #000 !important;}
+form#formularioMunicipio2 span.select2{width: 180px !important;}
