--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -43,17 +43,18 @@
                 </div>
 
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <form class="navbar-form navbar-right">
+                    <form class="navbar-form navbar-right" id="formularioMunicipio2">
                         Elija el municipio con el cual desea comparar a {{ municipio }}:
-                        <select class="form-control" name="municipio2" id="municipio2">
+                        <select name="municipio2" id="municipio2">
                             <option value="">(Municipio)</option>
-                            {% for municipio in municipios %}
-                                <option value="{{ municipio.slug }}">{{ municipio.nombre }}</option>
+                            {% for municipio in municipios|dictsort:'nombre' %}
+                                {% if municipio.slug != request.GET.municipio %}
+                                    <option value="{{ municipio.slug }}">{{ municipio.nombre }}</option>
+                                {% endif %}
                             {% endfor %}
                         </select>
                     </form>
                 </div>
-
 
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <h2>{{ municipio }}</h2>
@@ -198,7 +199,6 @@
                         </div>
                     </div>
                 </div>
-
 
             {% else %}
                 <div class="col-lg-12 col-md-12 col-sm-12">
