--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -37,12 +37,14 @@
                 <h4>Millones de córdobas corrientes</h4>
                 <hr class="pma-line-1"/>
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <form class="navbar-form navbar-right">
+                    <form class="navbar-form navbar-right" id="formularioMunicipio2">
                         <p>
-                            Elija el municipio: <select class="form-control" name="municipio2" id="municipio2">
-                            <option value="">(Municipio)</option>
-                            {% for municipio in municipios %}
-                                <option value="{{ municipio.slug }}">{{ municipio.nombre }}</option>
+                            Elija el municipio: <select name="municipio2" id="municipio2">
+                            <option value="" hidden>(Municipio)</option>
+                            {% for municipio in municipios|dictsort:'nombre' %}
+                                {% if municipio.slug != request.GET.municipio %}
+                                    <option value="{{ municipio.slug }}">{{ municipio.nombre }}</option>
+                                {% endif %}
                             {% endfor %}
                         </select>
                             con el cual desea compararse.
@@ -182,13 +184,6 @@
 {% endblock %}
 
 {% block extra_footer_scripts %}
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip({
-                placement: 'top'
-            });
-        });
-    </script>
     <script src="{% static 'js/pma.js' %}"></script>
     <script src="{% static 'js/highcharts.js' %}"></script>
     <script>
