--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -326,7 +326,7 @@
                         </div>
                         <div class="col-lg-12 col-md-12">
                             <h2>Tasa de crecimiento promedio anual<br/>
-                                rankin municipal
+                                ranking municipal
                                 por período de gobierno
                             </h2>
                             <hr class="pma-line-1"/>
@@ -372,6 +372,8 @@
                                                         <tr class="bg-primary">
                                                             <th>Municipio</th>
                                                             <th>Tasa de Crecimiento</th>
+                                                            <th>Clasificaci&oacute;n</th>
+                                                            <th>Partido Politico</th>
                                                         </tr>
                                                         </thead>
                                                         <tbody>
@@ -379,6 +381,8 @@
                                                             <tr>
                                                                 <td>{{ row.name }}</td>
                                                                 <td>{{ row.value|floatformat:2 }}</td>
+                                                                <td>{{ row.clasificacion }}</td>
+                                                                <td>{{ row.partido }}</td>
                                                             </tr>
                                                         {% endfor %}
                                                         </tbody>
@@ -390,6 +394,8 @@
                                                         <tr class="bg-primary">
                                                             <th>Municipio</th>
                                                             <th>Tasa de Crecimiento</th>
+                                                            <th>Clasificaci&oacute;n</th>
+                                                            <th>Partido Politico</th>
                                                         </tr>
                                                         </thead>
                                                         <tbody>
@@ -397,6 +403,8 @@
                                                             <tr>
                                                                 <td>{{ row.name }}</td>
                                                                 <td>{{ row.value|floatformat:2 }}</td>
+                                                                <td>{{ row.clasificacion }}</td>
+                                                                <td>{{ row.partido }}</td>
                                                             </tr>
                                                         {% endfor %}
                                                         </tbody>
@@ -417,13 +425,6 @@
 {% endblock %}
 
 {% block extra_footer_scripts %}
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip({
-                placement: 'top'
-            });
-        });
-    </script>
     <script src="{% static 'js/pma.js' %}"></script>
 
     <script src="{% static 'js/highcharts.js' %}"></script>
