retornando los municipios con su partido politico y clasificacion segun el ultimo año del ultimo periodo

--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -87,7 +87,7 @@
                                             <optgroup>
                                                 <option value="">Todos</option>
                                             </optgroup>
-                                            {% regroup municipios by depto as departamentos %}
+                                            {% regroup municipios by depto__nombre as departamentos %}
                                             {% for departamento in departamentos %}
                                                 <optgroup label="{{ departamento.grouper }}">
                                                     {% for m in departamento.list %}
