correccion de agrupacion de listado de municipios en menu principal del sitio

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -114,7 +114,7 @@
                         <select class="listado-municipios pull-right" name="municipio">
                             <option></option>
                             <!--option class="amarillo">Consolidado Municipal</option-->
-                            {% regroup municipios by depto as departamentos %}
+                            {% regroup municipios by depto__nombre as departamentos %}
                             {% for departamento in departamentos %}
                                 <optgroup label="{{ departamento.grouper }}">
                                     {% for m in departamento.list %}
