modificando titulo de de tabla de rubros ago

--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -47,7 +47,7 @@
                     <thead>
                     <tr>
                         <td colspan="4" rowspan="1" class="text-justify">
-                            <h4>Rubros de ingresos corrientes para el per&iacute;odo {{ year }}
+                            <h4>Rubros de ingresos corrientes propios para el per&iacute;odo {{ year }}
                                 {% if periodo_list|keyvalue:year == 'F' %}
                                     cierre
                                 {% elif periodo_list|keyvalue:year == 'A' %}
